tests/sksl/errors/golden/SpuriousFloat.glsl
### Compilation failed:

error: 3: expected ';', but found '2.5'
1 error
